apps/base/vaultwarden/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vaultwarden-svc
  namespace: vaultwarden
  annotations:
    lbipam.cilium.io/ips: "192.168.40.20"
  labels:
    bgp-advertise: "true"
spec:
  type: ClusterIP
  selector:
    app: vaultwarden
  ports:
    - name: http
      port: 80
      targetPort: http
