apps/base/vaultwarden/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: vaultwarden
  namespace: vaultwarden
spec:
  parentRefs:
  - name: public-gateway
    sectionName: https

  hostnames:
    - vaultwarden.tmatthews.casa

  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /

      backendRefs:
        - name: vaultwarden
          kind: Service
          port: 80
