apps/base/vaultwarden/https-redirect.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: vaultwarden-http-redirect
  namespace: vaultwarden
spec:
  parentRefs:
  - name: public-gateway
    namespace: traefik
    sectionName: http

  hostnames:
    - vaultwarden.tmatthews.casa

  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
